--- a/client-app/src/locales/en.json
+++ b/client-app/src/locales/en.json
@@ -12,6 +12,10 @@
   "barnList": {
     "itemView": "Details"
   },
+  "storageList": {
+    "working": "Active",
+    "notWorking": "Inactive"
+  },
   "unionsOfMeasurement": {
     "temperature": "°F"
   },
