--- a/client-app/src/locales/ua.json
+++ b/client-app/src/locales/ua.json
@@ -12,6 +12,10 @@
   "barnList": {
     "itemView": "Деталі"
   },
+  "storageList": {
+    "working": "Активний",
+    "notWorking": "Неактивний"
+  },
   "unionsOfMeasurement": {
     "temperature": "°C"
   },
