--- a/client-app/src/locales/ua.json
+++ b/client-app/src/locales/ua.json
@@ -50,5 +50,23 @@
     "isDeactivated": "Неактивний",
     "cancel": "Скасувати",
     "submit": "Підтвердити"
+  },
+  "user": {
+    "email": "Email",
+    "username": "Ім'я користувача",
+    "displayName": "Ім'я для відображення",
+    "bio": "Про себе",
+    "password": "Пароль"
+  },
+  "userFormErrors": {
+    "email": "поле Email користувача має бути заповнене",
+    "invalidEmail": "Неправильна адреса електронної пошти",
+    "username": "поле Ім'я користувача користувача має бути заповнене",
+    "displayName": "поле Ім'я для відображення  має бути заповнене",
+    "bio": "поле Про себе має бути заповнене",
+    "password": "поле Пароль має бути заповнене",
+    "weakPassword": "Пароль має містити не менше 8 символів, одну велику літеру, одну малу літеру, одну цифру та один спеціальний символ",
+    "invalidLogin": "Неправильна адреса електронної пошти або пароль",
+    "unauthorised": "Помилка входу"
   }
 }
