--- a/client-app/src/locales/ua.json
+++ b/client-app/src/locales/ua.json
@@ -68,5 +68,12 @@
     "weakPassword": "Пароль має містити не менше 8 символів, одну велику літеру, одну малу літеру, одну цифру та один спеціальний символ",
     "invalidLogin": "Неправильна адреса електронної пошти або пароль",
     "unauthorised": "Помилка входу"
+  },
+  "loadingComponent": {
+    "loading": "Завантаження...",
+    "loadingApp": "Завантаження застосунку...",
+    "loadingBarns": "Завантаження амбарів...",
+    "loadingBarn": "Завантаження амбару...",
+    "loadingStorages": "Завантаження складів..."
   }
 }
