--- a/client-app/src/locales/ua.json
+++ b/client-app/src/locales/ua.json
@@ -70,6 +70,12 @@
     "invalidLogin": "Неправильна адреса електронної пошти або пароль",
     "unauthorised": "Помилка входу"
   },
+  "barnFormErrors": {
+    "name": "поле Назва амбару має бути заповнене",
+    "description": "поле Опис амбару має бути заповнене",
+    "eggGrade": "Заповніть категорію яєць",
+    "temperature": "Температура повинна бути більше нуля"
+  },
   "loadingComponent": {
     "loading": "Завантаження...",
     "loadingApp": "Завантаження застосунку...",
