BarnForm i18n temperature according to lan

--- a/client-app/src/locales/en.json
+++ b/client-app/src/locales/en.json
@@ -21,7 +21,8 @@
   },
   "unionsOfMeasurement": {
     "temperature": "°F",
-    "capacity": "l."
+    "capacity": "l.",
+    "temperatureInFahrenheit": "Temperature in Fahrenheit"
   },
   "navBar": {
     "barns": "Barns",
